--- a/spring_intro2/spring-petclinic/src/main/resources/application.properties
+++ b/spring_intro2/spring-petclinic/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # database init, supports mysql too
-database=hsqldb
+database=h2
 spring.datasource.schema=classpath*:db/${database}/schema.sql
 spring.datasource.data=classpath*:db/${database}/data.sql
 
@@ -18,7 +18,7 @@ management.endpoints.web.exposure.include=*
 
 # Logging
 logging.level.org.springframework=INFO
-logging.level.org.springframework.web=DEBUG
+# logging.level.org.springframework.web=DEBUG
 # logging.level.org.springframework.context.annotation=TRACE
 
 # Maximum time static resources should be cached
