Add spring boot API

--- a/learning-spring3/restful-web-service/src/main/resources/application.yml
+++ b/learning-spring3/restful-web-service/src/main/resources/application.yml
@@ -8,3 +8,13 @@ logging:
 spring:
   messages:
     basename: messages
+  security:
+    user:
+      name: username
+      password: passw0rd
+
+menagement:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
