--- a/learning-spring3/restful-web-service/src/main/resources/application.yml
+++ b/learning-spring3/restful-web-service/src/main/resources/application.yml
@@ -6,6 +6,11 @@ logging:
     org.springframework: DEBUG
 
 spring:
+  jpa:
+    show-sql: true
+  h2:
+    console:
+      enabled: true
   messages:
     basename: messages
   security:
