--- a/learning-spring3/restful-web-service/src/main/resources/application.yml
+++ b/learning-spring3/restful-web-service/src/main/resources/application.yml
@@ -6,8 +6,11 @@ logging:
     org.springframework: DEBUG
 
 spring:
+  datasource:
+    url: jdbc:h2:mem:testdb
   jpa:
     show-sql: true
+    defer-datasource-initialization: true
   h2:
     console:
       enabled: true
