--- a/learning-spring6/validation/src/main/resources/errors.properties
+++ b/learning-spring6/validation/src/main/resources/errors.properties
@@ -41,8 +41,8 @@ typeMismatch=타입 오류입니다.
 
 #Bean Validation 추가
 
-#NotBlank.item.itemName=상품 이름을 적어주세요.
+NotBlank.item.itemName=상품 이름을 적어주세요.
 
-#NotBlank={0} 공백X
+NotBlank={0} 공백X
 Range={0}, {2} ~ {1} 허용
 Max={0}, 최대 {1}
